Enable tracking mangas without released chapters
